[Refactor, Exception] Removed all catch blocks that ignored exceptions. [Refactor] Constraints no longer require overriding as many methods as before. Instead, many now share common behavior. [UX] Added an experimental Dark Theme mode.